# anneal

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  HANDOFF.md  README.md  pyproject.toml
.claude/skills/anneal/: SKILL.md
examples/adversarial_demo/: README.md  expected_outcome.md  token_bucket.py
examples/adversarial_demo/tests/: test_token_bucket.py
examples/synthetic_buggy/: README.md  expected_findings.md  payment.py
examples/synthetic_buggy/tests/: test_payment.py
src/anneal/: __init__.py  batch.py  cli.py  config.py  cost.py  loop_adversarial.py  loop_classic.py  result.py
src/anneal/adversarial/: __init__.py  base.py  blue.py  judge.py  logic_red.py  red.py  (+4 more)
tests/integration/: test_canary_suite_runs.py  test_replay_am_smoke.py  test_synthetic_buggy_adversarial.py  test_synthetic_buggy_classic.py
tests/unit/: test_batch_subcommand.py  test_canary_runner.py  test_cli_canary_smoke.py  test_cli_smoke.py  test_cost.py  test_env_guard.py  test_go_runner.py  test_intervention.py  test_javascript_runner.py  test_judge.py  test_llm_factory.py  test_loop_adversarial.py  test_loop_classic.py  test_loop_classic_memory.py  test_patch.py  test_pipeline_auditor_prior_attempts.py  test_pipeline_auditor_schema.py  test_prior_attempts_format.py  test_python_test_runner.py  test_red_attack_serialization.py  test_repograph.py  test_sast_ruff.py  test_sast_semgrep.py  test_semantic_diff.py  test_specialized_fixers.py  test_specialized_red.py  test_suppressions.py  test_tier_resolution.py  test_voting_auditor.py  test_voting_judge.py  test_voting_prior_attempts.py
(+167 files in other folders)
